--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,14 +4,18 @@ spring.datasource.hikari.connectionTimeout=20000
 spring.datasource.hikari.maximumPoolSize=5
 
 ## PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/testdb
+spring.datasource.url=jdbc:postgresql://localhost:5432/empdb
 spring.datasource.username=postgres
 spring.datasource.password=postgre
 
 # create and drop table, good for testing, production set to none or comment it
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
+server.port=8000
+
 spring.jpa.show-sql=true
+
+
